--- a/style.css
+++ b/style.css
@@ -205,3 +205,70 @@ section .card p {
     text-decoration: none;
     color: #fff;
 }
+
+/* Menu toggler */
+#menu-toggler,
+#hamburger-button {
+    display: none;
+}
+
+/* Responsiveness */
+@media (width < 980px) {
+    header {
+        position: fixed;
+        width: 100%;
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 100;
+    }
+
+    header ul li {
+        list-style: none;
+        margin-left: 0;
+        padding: 0 0 15px 0;
+    }
+
+    header ul li a {
+        text-decoration: none;
+        padding: 6px 15px;
+        color: #fff;
+        border-radius: 0;
+        display: block;
+    }
+
+    header ul li a:hover,
+    header ul li a.active {
+        background: #fff;
+        color: #2b1055;
+    }
+
+    .navbar .nav-links {
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 100%;
+        display: block;
+        background: linear-gradient(135deg, #614385, #516395);
+        width: 250px;
+        padding-top: 30px;
+        left: -100%;
+        transition: all 0.4s ease;
+    }
+
+    #menu-toggler:checked ~ .nav-links {
+        left: 0;
+    }
+
+    .nav-links li {
+        font-size: 18px;
+    }
+
+    #hamburger-button {
+        display: block;
+        color: #fff;
+        font-size: 22px;
+        cursor: pointer;
+    }
+}
