--- a/style.css
+++ b/style.css
@@ -419,3 +419,63 @@ section .card p {
         padding: 150px 30px 100px 30px;
     }
 }
+
+/* Game page ---------------------------------------------------------------------------------------------------------------- */
+.game {
+    background: url(images/game-background.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.game-description {
+    border: 2px solid white;
+    background: rgba(0, 0, 0, 0.9);
+    box-shadow: 0 0 5px 1px white;
+    color: #fff;
+    padding: 30px;
+    height: calc(100vh - 120px);
+    max-width: 700px;
+    margin: auto;
+}
+
+.game-description h1 {
+    padding-bottom: 10px;
+    font-size: 180%;
+}
+
+.game-description p {
+    padding-bottom: 10px;
+    font-size: 100%;
+}
+
+.game-description button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#start-game-button {
+    margin-top: 15px;
+    padding: 5px 30px;
+    font-size: 1.2em;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #fff;
+    box-shadow: 0 0 1px 3px #40e0d0;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    color: #40e0d0;
+}
+
+#start-game-button:hover {
+    background-color: #40e0d0;
+    color: #000;
+}
+
+.game-button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 15px;
+}
+
