--- a/style.css
+++ b/style.css
@@ -592,7 +592,126 @@ section .card p {
     justify-content: left;
 }
 
+/* Chatbot -------------------------------------------------------------------------------------------------------------------*/
+.chatbot {
+    position: fixed;
+    right: 40px;
+    bottom: 120px;
+    width: 420px;
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    z-index: 200;
+}
 
+.chatbot h2 {
+    background: linear-gradient(135deg, #614385, #516395);
+    padding: 16px 0;
+    text-align: center;
+    border-radius: 15px;
+    color: #fff;
+    font-size: 1.4rem;
+}
+
+.chatbot .chatbox {
+    height: 400px;
+    overflow-y: auto; /* enable vertical scroll if conversation messages need more than height*/
+    padding: 15px 20px 70px;
+}
+
+.chatbot .chat {
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.chatbot .chat p {
+    max-width: 75%;
+    color: #fff;
+    font-size: 0.95rem;
+    padding: 12px 16px;
+    border-radius: 10px 10px 0 10px;
+    background: #516395;
+}
+
+.chatbox .incoming p {
+    color: #000;
+    background-color: #f2f2f2;
+    border-radius: 0 10px 10px 10px;
+}
+
+.chatbox .incoming span {
+    height: 30px;
+    width: 30px;
+}
+
+.chatbox .outgoing {
+    justify-content: flex-end;
+}
+
+.chatbot .chat-input {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: #fff;
+    padding: 5px 20px;
+    border-top: 1px solid #ccc;
+    border-radius: 15px;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.chat-input textarea {
+    height: 55px;
+    width: 100%;
+    border: none;
+    outline: none;
+    font-size: 0.95rem;
+    resize: none;
+    padding: 16px 15px 16px 0;
+}
+
+.chat-input .send-btn {
+    align-items: center;
+    font-size: 24px;
+}
+
+.chat-input .send-btn:hover {
+    color: #516395;
+    cursor: pointer;
+}
+
+.chatbot-toggler {
+    position: fixed;
+    right: 40px;
+    bottom: 50px;
+    height: 60px;
+    width: 60px;
+    color: #fff;
+    border: 1px solid #fff;
+    outline: none;
+    background: linear-gradient(135deg, #614385, #516395);
+    border-radius: 50%;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    z-index: 200;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.chatbot-toggler:hover {
+    box-shadow: 0 0 10px #40e0d0, 0 0 40px #40e0d0, 0 0 80px #40e0d0;
+}
+
+.chatbot-toggler span {
+    position: absolute;
+    font-size: 24px;
+}
+
+.chatbot-toggler span:last-child {
+    opacity: 0;
+}
 
 /* Responsiveness ---------------------------------------------------------------------------------------------------- */
 @media (width < 1050px) {
