--- a/style.css
+++ b/style.css
@@ -610,10 +610,15 @@ section .card p {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.5s ease;
 }
 
 .chatbot-toggler:hover {
     box-shadow: 0 0 10px #40e0d0, 0 0 40px #40e0d0, 0 0 80px #40e0d0;
+}
+
+.show-chatbot .chatbot-toggler {
+    transform: rotate(90deg);
 }
 
 .chatbot-toggler span {
@@ -642,6 +647,8 @@ section .card p {
     transform: scale(0.5);
     opacity: 0;
     pointer-events: none;
+    transform-origin: bottom right;
+    transition: all 0.1s ease;
 }
 
 /* Open chatbot feature when chatbot-toggler is checked */
@@ -714,6 +721,7 @@ section .card p {
     width: 100%;
     border: none;
     outline: none;
+    max-height: 180px;
     font-size: 0.95rem;
     resize: none;
     padding: 16px 15px 16px 0;
